<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/book_list"
        android:icon="@drawable/ic_book"
        android:title="@string/list"
        app:showAsAction="always" />

    <item
        android:id="@+id/book_feed"
        android:icon="@drawable/ic_navigation"
        android:title="@string/feeds"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/book_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>