<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:background="@drawable/shape_rounded_white_bg"
    android:padding="@dimen/margin_12dp">

    <TextView
        android:id="@+id/tvRevie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/ivBookThumbnail"
        android:ellipsize="end"
        android:lines="3"
        android:text="@string/review_2"
        android:textColor="@color/colorDarkGrey"
        android:textSize="@dimen/text_small_10" />

    <TextView
        android:id="@+id/tvSeeReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRevie"
        android:text="@string/full_review" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSeeReview"
        android:layout_marginTop="@dimen/margin_10dp"
        android:numStars="5"
        android:progressTint="@color/colorYellow"
        android:rating="4" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSeeReview"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_toRightOf="@+id/ratingBar"
        android:gravity="center_vertical"
        android:text="@string/rating_value"
        android:layout_marginStart="@dimen/margin_5dp"
        android:layout_toEndOf="@+id/ratingBar" />

    <ImageView
        android:id="@+id/ivBookThumbnail"
        android:layout_width="@dimen/margin_80dp"
        android:layout_height="@dimen/margin_80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_thumbnail_one" />


</RelativeLayout>